syntax = "proto3";

package net.devh.boot.grpc.example;
option java_multiple_files = true;
option java_outer_classname = "AuthProto";
option java_package = "com.microservice.auth_proto";

service AuthService {
  rpc doAuthenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc doIdentity(IdentityRequest) returns (IdentityResponse);

  rpc postRegister(RegisterRequest) returns (RegisterResponse);
  rpc postLogin(LoginRequest) returns (LoginResponse);
  rpc postLogout(LogoutRequest) returns (LogoutResponse);
  rpc getProfile(ProfileRequest) returns (ProfileResponse);
}

message ProfileRequest {
  int32 accountId = 1;
}
message Profile {
  string username = 1;
  string email = 2;
  string roles = 3;
}
message ProfileResponse {
  int32 status = 1;
  string message = 2;
  Profile profile = 3;
}


message LogoutRequest {
  string accessToken = 1;
}
message LogoutResponse {
  int32 status = 1;
  string message = 2;
}


message LoginSuccessInfo {
  string accessToken = 1;
  int64 expiresIn = 2;
  string tokenType = 3;
}
message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginResponse {
  int32 status = 1;
  string message = 2;
  LoginSuccessInfo loginSuccessInfo = 3;
}


message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}
message RegisterResponse {
  int32 status = 1;
  string message = 2;
}

message AuthenticateRequest {
  string token = 1;
}

message AuthenticateResponse {
  bool isValid = 1;
  string userId = 2;
  int64 ttl = 3;
}

message IdentityRequest {
  int32 userId = 1;
}

message IdentityResponse {
  bool active = 1;
  string roles = 2;
}